# zenmode

./: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml  desktop-build.yml
desktop-tauri/: package-lock.json  package.json
desktop-tauri/src/: quick-add.html
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: lib.rs  main.rs
mobile/: App.tsx  app.json  eas.json  metro.config.js  package-lock.json  package.json
mobile/src/components/: AddTaskFAB.tsx  (+7 more)
public/: CNAME  about.html  changelog.html  manifesto.html  privacy.html  terms.html
public/about/: index.html
public/auth/: callback.html
public/changelog/: index.html
public/delete-account/: index.html
public/downloads/: index.html
public/manifesto/: index.html
public/privacy/: index.html
shared/lib/: recurrence.ts  reminderParser.ts  supabase.ts  sync.ts
shared/types/: index.ts
src/: App.tsx  index.css
src/hooks/: useDragAndDrop.ts  useTimeline.ts
src/lib/: colorThemes.ts  dates.ts  editNavigation.ts  googleCalendar.ts  recurrence.ts  reminderParser.ts  stats.ts  supabase.ts  sync.ts
src/store/: usePlannerStore.ts
src/types/: index.ts
supabase/migrations/: 20260307173442_add_notes_column.sql  20260307202335_add_missing_columns.sql  20260307202744_add_all_missing_columns.sql  20260308000000_enable_realtime.sql  20260315000000_add_reminder_at.sql  20260316000000_add_ritual_snooze_columns.sql  (+1 more)
(+84 files in other folders)
